pk: only resolve packages as they're offered from a ::search call

It should make the resolve calls a bit faster since we are not
processing all packages at startup. It does increase the calls we make
though.

BUG: 423723