libdiscover/backends/PackageKitBackend/PKResolveTransaction.cpp
@@ -18,19 +18,40 @@
  *   along with this program.  If not, see <http://www.gnu.org/licenses/>. *
  ***************************************************************************/
 
-#include "TransactionSet.h"
+#include "PKResolveTransaction.h"
+#include <PackageKit/Daemon>
+#include "PackageKitBackend.h"
 
 #include <QDebug>
 
-TransactionSet::TransactionSet(const QVector<PackageKit::Transaction*> &transactions)
-    : m_transactions(transactions)
+PKResolveTransaction::PKResolveTransaction(PackageKitBackend* backend)
+    : m_backend(backend)
 {
-    foreach(PackageKit::Transaction* t, transactions) {
-        connect(t, &PackageKit::Transaction::finished, this, &TransactionSet::transactionFinished);
+    m_floodTimer.setInterval(1000);
+    m_floodTimer.setSingleShot(true);
+    connect(&m_floodTimer, &QTimer::timeout, this, &PKResolveTransaction::start);
+}
+
+void PKResolveTransaction::start()
+{
+    Q_EMIT started();
+
+    PackageKit::Transaction * tArch = PackageKit::Daemon::resolve(m_packageNames, PackageKit::Transaction::FilterArch);
+    connect(tArch, &PackageKit::Transaction::package, m_backend, &PackageKitBackend::addPackageArch);
+    connect(tArch, &PackageKit::Transaction::errorCode, m_backend, &PackageKitBackend::transactionError);
+
+    PackageKit::Transaction * tNotArch = PackageKit::Daemon::resolve(m_packageNames, PackageKit::Transaction::FilterNotArch);
+    connect(tNotArch, &PackageKit::Transaction::package, m_backend, &PackageKitBackend::addPackageNotArch);
+    connect(tNotArch, &PackageKit::Transaction::errorCode, m_backend, &PackageKitBackend::transactionError);
+
+    m_transactions = {tArch, tNotArch};
+
+    foreach(PackageKit::Transaction* t, m_transactions) {
+        connect(t, &PackageKit::Transaction::finished, this, &PKResolveTransaction::transactionFinished);
     }
 }
 
-void TransactionSet::transactionFinished(PackageKit::Transaction::Exit exit)
+void PKResolveTransaction::transactionFinished(PackageKit::Transaction::Exit exit)
 {
     PackageKit::Transaction* t = qobject_cast<PackageKit::Transaction*>(sender());
     if (exit != PackageKit::Transaction::ExitSuccess) {
@@ -42,4 +63,11 @@ void TransactionSet::transactionFinished(PackageKit::Transaction::Exit exit)
         Q_EMIT allFinished();
         deleteLater();
     }
+}
+
+void PKResolveTransaction::addPackageNames(const QStringList& packageNames)
+{
+    m_packageNames += packageNames;
+    m_packageNames.removeDuplicates();
+    m_floodTimer.start();
 }
